Modular testing setup (#101)